# ADOPT

./: .gitignore  .npmrc  AGENTS.md  README.md  design-qa.md  package.json  pnpm-lock.yaml  vite.config.mjs
.github/workflows/: deploy-pages.yml
drayage-gen-data/: .gitignore  CSV_CONTRACT.md  LICENSE  README.md  generate.py  generate_adopt_year.py  pyproject.toml
drayage-gen-data/examples/: config.json
drayage-gen-data/src/drayage_gen_data/: __init__.py  cli.py  io.py  models.py  optimizer.py  synthetic.py
drayage-gen-data/tests/: test_synthetic_scheduler.py
public/data/: customers.csv  daily_summary.csv  locations.csv  manifest.json  products.csv  vessel_calls.csv
scripts/: generate_basemap.py
src/: App.jsx  styles.css
